--- a/roles/osp-servers/tasks/main.yml
+++ b/roles/osp-servers/tasks/main.yml
@@ -4,21 +4,21 @@
 - name: Create OpenStack server instances
   os_server:
     cloud: openstack
-    name: "{{ item.value.name }}"
-    state: "{{ item.value.state }}"
-    image: "{{ item.value.image }}"
-    flavor: "{{ item.value.flavor }}"
-    key_name: "{{ item.value.key_name }}" 
-    security_groups: "{{ item.value.security_group }}"
-    meta: "{{ item.value.meta }}"
+    name: frontend #"{{ item.value.name }}"
+    state: present #"{{ item.value.state }}"
+    image: rhel-guest #"{{ item.value.image }}"
+    flavor: m1.medium #"{{ item.value.flavor }}"
+    key_name: ansible_ssh "{{ item.value.key_name }}" 
+    security_groups: frontend #"{{ item.value.security_group }}"
+    meta: "group: frontends, deployment_name: QA" #"{{ item.value.meta }}"
     nics:
       - net-name: int_network
     userdata: |
      #!/bin/bash
      curl -o /tmp/openstack.pub http://www.opentlc.com/download/ansible_bootcamp/openstack_keys/openstack.pub
      cat /tmp/openstack.pub >> /home/cloud-user/.ssh/authorized_keys
-  with_dict:
-    "{{ osp_servers }}"
+#  with_dict:
+#    "{{ osp_servers }}"
   async: 900
   poll: 0
   register: r_instances
