--- a/site-osp-instances.yml
+++ b/site-osp-instances.yml
@@ -1,6 +1,6 @@
 ---
 - name: Deploy OpenStack Servers
-  hosts: localhost
+  hosts: workstation
   connection: local
   become: no
   gather_facts: true
