--- a/roles/osp-servers/tasks/main.yml
+++ b/roles/osp-servers/tasks/main.yml
@@ -28,7 +28,7 @@
    cloud: openstack
    name: app1 #"{{ item.value.name }}"
    state: present #"{{ item.value.state }}"
-   image: rhel-guest" #{{ item.value.image }}"
+   image: rhel-guest  #"{{ item.value.image }}"
    flavor: m1.medium #"{{ item.value.flavor }}"
    key_name: ansible_ssh #"{{ item.value.key_name }}" 
    security_groups: apps #"{{ item.value.security_group }}"
