--- a/roles/osp-servers/tasks/main.yml
+++ b/roles/osp-servers/tasks/main.yml
@@ -39,8 +39,8 @@
     #!/bin/bash
     curl -o /tmp/openstack.pub http://www.opentlc.com/download/ansible_bootcamp/openstack_keys/openstack.pub
     cat /tmp/openstack.pub >> /home/cloud-user/.ssh/authorized_keys
-  with_dict:
-    "{{ osp_servers }}"
+#  with_dict:
+#    "{{ osp_servers }}"
   async: 900
   poll: 0
   register: r_instances
