--- a/roles/osp-servers/tasks/main.yml
+++ b/roles/osp-servers/tasks/main.yml
@@ -75,7 +75,7 @@
   register: r_wait
   until: r_wait.finished
   retries: 900
-  loop: "{{ r_instances.results }}"
+#  loop: "{{ r_instances.results }}"
 
 - name: Debug instances 
   debug:
