--- a/roles/osp-servers/tasks/main.yml
+++ b/roles/osp-servers/tasks/main.yml
@@ -34,6 +34,7 @@
    flavor: m1.medium #"{{ item.value.flavor }}"
    key_name: ansible_ssh #"{{ item.value.key_name }}" 
    security_groups: apps #"{{ item.value.security_group }}"
+   wait: yes
    delete_fip: yes
    meta: "group: , deployment_name: QA" #"{{ item.value.meta }}"
    nics:
@@ -70,11 +71,11 @@
 #  pause:
 #    minutes: 180
 
-- name: Wait for async OSP instance creation to complete
-  async_status: "jid={{ item.ansible_job_id }}"
-  register: r_wait
-  until: r_wait.finished
-  retries: 900
+#- name: Wait for async OSP instance creation to complete
+#  async_status: "jid={{ item.ansible_job_id }}"
+#  register: r_wait
+#  until: r_wait.finished
+#  retries: 900
 #  loop: "{{ r_instances.results }}"
 
 - name: Debug instances 
