mod site-osp-instances.yml

--- a/roles/osp-servers/tasks/main.yml
+++ b/roles/osp-servers/tasks/main.yml
@@ -78,13 +78,13 @@
 #  retries: 900
 #  loop: "{{ r_instances.results }}"
 
-- name: Debug instances 
-  debug:
-    msg: "Server is {{ __instance.__openstack_server.instance_name }}"
-    verbosity: 2
-  loop: "{{ r_instances.results }}"
-  loop_control:
-    loop_var: __instance
+#- name: Debug instances 
+#  debug:
+#    msg: "Server is {{ __instance.__openstack_server.instance_name }}"
+#    verbosity: 2
+#  loop: "{{ r_instances.results }}"
+#  loop_control:
+#    loop_var: __instance
 
 - name: Add floating IP to instances
   os_floating_ip:
